# Lyra

./: .clang-format  .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.adoc  README.adoc  appveyor.yml  azure-pipelines.yml  build.jam  meson.build
.ci/: azp-linux-docker-test.yml  azp-linux-test.yml  azp-mingw-test.yml  azp-msvc-test.yml  azp-xcode-test.yml  linux-cxx-install.sh  macos-xcode-install.sh  windows-msvc-setup.cmd
.github/: FUNDING.yml
data/: build.jam
data/cmake/: lyraConfig.cmake.in
data/pkgconfig/: pkgconfig.pc.in
data/single_include/lyra/: lyra.hpp
docs/: build.jam  index.adoc  index.html  logo.odg  lyra.adoc  lyra.html  std.css
examples/: build.jam  combined_parser.cpp  count_flag.cpp  doc_commands.cpp  doc_example1.cpp  doc_example1_alt.cpp  doc_example2.cpp  doc_example2_alt.cpp  doc_example3.cpp  doc_example4.cpp  doc_example5.cpp  doc_example6.cpp  doc_groups.cpp  doc_simple.cpp  doc_simple_alt.cpp  option_styles.cpp
include/: clara.hpp
include/lyra/: arg.hpp  args.hpp  arguments.hpp  clara.hpp  cli.hpp  cli_parser.hpp  command.hpp  exe_name.hpp  group.hpp  help.hpp  literal.hpp  lyra.hpp  main.hpp  opt.hpp  option_style.hpp  parser.hpp  parser_result.hpp  printer.hpp  val.hpp  version.hpp
include/lyra/detail/: bound.hpp  choices.hpp  deprecated_parser_customization.hpp  from_string.hpp  invoke_lambda.hpp  parse.hpp  print.hpp  result.hpp  tokens.hpp  trait_utils.hpp  unary_lambda_traits.hpp
src/: build.jam  mini_test.hpp  test_base.cpp  test_char_args.cpp  test_cmdline.cpp  test_combined_parser.cpp  test_flag_parser.cpp  test_invalid_parsers.cpp  test_multiple_flags.cpp  test_optional_type.cpp  test_single_parser.cpp  test_single_parser_01.cpp  test_single_parser_02.cpp  test_single_parser_03.cpp  test_single_parser_04.cpp  test_single_parser_05.cpp  test_single_parser_06.cpp  test_unrecognized_opts.cpp
tests/: args_run_test.cpp  base_compile_test.cpp  build.jam  cardinality_run_test.cpp  char_args_run_test.cpp  cmdline_run_test.cpp  combined_parser_run_test.cpp  command_run_test.cpp  doc_commands_run_test.cpp  doc_example1_alt_run_test.cpp  doc_example1_run_test.cpp  doc_example2_alt_run_test.cpp  doc_example2_run_test.cpp  doc_example3_run_test.cpp  doc_example4_run_test.cpp  doc_example5_run_test.cpp  doc_example6_run_test.cpp  doc_groups_run_test.cpp  doc_simple_alt_run_test.cpp  doc_simple_run_test.cpp  ex_count_flag_run_test.cpp  ex_option_styles_run_test.cpp  flag_parser_run_test.cpp  group_run_test.cpp  hint_run_test.cpp  invalid_parsers_run_test.cpp  issue_49_run_test.cpp  issue_55_run_test.cpp  issue_65_run_test.cpp  issue_70_run_test.cpp  issue_73_run_test.cpp  literal_run_test.cpp  main_run_test.cpp  main_test.hpp  mini_test.hpp  multiple_flags_run_test.cpp  option_styles_run_test.cpp  option_variants_run_test.cpp  optional_arg_help_run_test.cpp  optional_type_run_test.cpp  (+11 more)
tests/lib_use_test/: CMakeLists.txt  base_exe.cpp  base_lib.cpp  base_lib.hpp  build.jam
tools/: gen_single_include.py
